# av

./: CMakeLists.txt  Makefile  SettingProfileEclipse.xml  akacoola Default.launch  partitions.csv  release_note.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Delay.c  Delay.h  ExternVariablesFunctions.h  GenericTypeDefs.h  I2Cdev.c  I2Cdev.h  IMU_Zero.c  IMU_Zero.h  Interrupt.c  Interrupt.h  Kconfig.projbuild  Library_Mod.c  Library_Mod.h  MPU6050.c  MPU6050.h  MPU6050_6Axis_MotionApps20.c  MPU6050_6Axis_MotionApps20.h  MahonyAHRS.c  MahonyAHRS.h  Other.c  Other.h  calib.h  esplog_task_uart0.c  esplog_task_uart0.h  gatt_s.c  gatt_s.h  helper_3dmath.c  helper_3dmath.h  logger.h  motion_tracking.h  tracking_adc.c  tracking_adc.h  tracking_main.c  tracking_main.h  tracking_timer.c  tracking_timer.h  variables.c  variables.h
