idf_component_register(SRCS "tracking_main.c"
                            "tracking_adc.c"
                            "tracking_timer.c"
                            "Other.c"
                            "MPU6050.c"
                            "MPU6050_6Axis_MotionApps20.c"
                            "MahonyAHRS.c"
                            "Library_Mod.c"
                            "Interrupt.c"
                            "IMU_Zero.c"
                            "I2Cdev.c"
                            "helper_3dmath.c"
                            "gatt_s.c"
                            "esplog_task_uart0.c"
                            "Delay.c"
                        INCLUDE_DIRS ".")